Created more tests. Added @NotNull constraint to arguments in service methods.